# lp-control

./: Cargo.toml  README.md
src/: actions.rs  canvas.rs  layouts.rs  main.rs
src/platform/: linux.rs  macos.rs  mod.rs
